[css-flexbox] Pass correct available width to constrainLogicalWidthByMinMax

When stretching we used to pass the wrong available width to
constrainLogicalWidthByMinMax, leading to an incorrect calculation of
percentage max/min widths.

BUG=675333
R=mstensho@opera.com,eae@chromium.org

Review-Url: https://codereview.chromium.org/2585423002
Cr-Commit-Position: refs/heads/master@{#439772}

Former-commit-id: 1691bb109535d456e52402b7fd2a82f02c1ba853